--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ Thumbs.db
 #   Created by Composer
 #-------------------------------
 vendor/
+
+#-------------------------------
+#   Created by npm
+#-------------------------------
+node_modules/
