--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/braveryk7/send-chat-tools#readme",
   "devDependencies": {
+    "css-loader": "^5.2.6",
+    "mini-css-extract-plugin": "^1.6.0",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   }
