--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/braveryk7/send-chat-tools#readme",
   "devDependencies": {
     "css-loader": "^5.2.6",
+    "fibers": "^5.0.0",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
