add webpack output:dist

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ vendor/
 #   Created by npm
 #-------------------------------
 node_modules/
+
+#-------------------------------
+#   Created by webpack
+#-------------------------------
+dist/
