--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev" : "webpack --mode development",
+    "dev": "webpack --mode development",
     "watch": "webpack --mode development --watch"
   },
   "repository": {
@@ -25,6 +25,8 @@
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   }
