--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "watch": "webpack --mode development --watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "stylelint": "stylelint **/*.{css,scss,sass}"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,10 @@
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-wordpress": "^17.0.0",
+    "stylelint-scss": "^3.19.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
