--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,30 @@
 {
     "phpcs.executablePath": "./vendor/bin/phpcs",
-    "editor.insertSpaces": false
+    "editor.insertSpaces": false,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true,
+        "source.fixAll.styylelint": true,
+    },
+    "css.validate": false,
+    "scss.validate": false,
+    "[html]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+    },
+    "[css]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+    },
+    "[php]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": false,
+    },
+    "[javascript]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+    },
+    "[typescript]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": false,
+    }
 }
