--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
-  }
+  },
+	"eslintIgnore": [
+	  "vendor",
+	  "node_modules",
+	  "dist/**/*.js",
+	  "webpack.config.js"
+	]
 }
