--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "watch": "webpack --mode development --watch",
-    "lint": "eslint src",
-    "stylelint": "stylelint **/*.{css,scss,sass}"
+	  "eslint": "./node_modules/.bin/eslint",
+	  "stylelint": "stylelint **/*.{css,scss,sass}",
+	  "postinstall": "mkdir -p src dist"
   },
   "repository": {
     "type": "git",
