--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "watch": "webpack --mode development --watch",
-	  "eslint": "./node_modules/.bin/eslint",
-	  "stylelint": "stylelint **/*.{css,scss,sass}",
-	  "postinstall": "mkdir -p src dist"
+    "eslint": "./node_modules/.bin/eslint",
+    "stylelint": "stylelint **/*.{css,scss,sass}",
+    "postinstall": "mkdir -p src dist"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@wordpress/eslint-plugin": "^9.0.6",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.28.0",
     "eslint-plugin-import": "^2.23.4",
