--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,19 @@
         "phpcompatibility/php-compatibility": "*"
     },
     "scripts": {
+        "post-autoload-dump": [
+            "@ghinit"
+        ],
         "post-update-cmd": [
             "@wplint-path",
             "@wplint-set",
-            "@wplint-rules",
-            "@pre-commit"
+            "@wplint-rules"
         ],
         "wplint": "./vendor/bin/phpcs",
         "wplint-path": "./vendor/bin/phpcs --config-set installed_paths 'vendor/wp-coding-standards/wpcs'",
         "wplint-set": "./vendor/bin/phpcs --config-set default_standard WordPress",
         "wplint-rules": "./vendor/bin/phpcs -i",
         "phpcb": "./vendor/bin/phpcs --standard=ruleset.xml",
-        "pre-commit": "cp conf/pre-commit .git/hooks"
+        "ghinit": "curl https://raw.githubusercontent.com/braveryk7/GitHooks/main/conf/init.sh > init.sh && sh init.sh"
     }
 }
