--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,13 @@
     },
     "css.validate": false,
     "scss.validate": false,
+    "stylelint.stylelintPath": "node_modules/stylelint",
+    "stylelint.validate": [
+        "css",
+        "scss",
+        "less",
+        "postcss"
+    ],
     "[html]": {
         "editor.tabSize": 4,
         "editor.insertSpaces": true,
