--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@wordpress/eslint-plugin": "^9.0.6",
+    "@wordpress/scripts": "^19.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.28.0",
@@ -37,6 +38,7 @@
     "stylelint": "^13.13.1",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-wordpress": "^17.0.0",
+    "stylelint-order": "^5.0.0",
     "stylelint-scss": "^3.19.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
