--- a/package.json
+++ b/package.json
@@ -22,28 +22,17 @@
     "url": "https://github.com/braveryk7/send-chat-tools/issues"
   },
   "homepage": "https://github.com/braveryk7/send-chat-tools#readme",
+  "dependencies": {
+    "@wordpress/block-editor": "^7.0.4",
+    "@wordpress/blocks": "^11.1.2",
+    "@wordpress/i18n": "^4.2.3"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
-    "@wordpress/eslint-plugin": "^9.0.6",
     "@wordpress/scripts": "^19.0.0",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^5.2.6",
-    "eslint": "^7.28.0",
-    "eslint-plugin-import": "^2.23.4",
-    "fibers": "^5.0.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "sass": "^1.34.1",
-    "sass-loader": "^12.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-config-wordpress": "^17.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^3.19.0",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.2",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0"
+    "typescript": "^4.3.2"
   },
   "eslintIgnore": [
     "vendor",
