--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "editor.insertSpaces": true,
     },
     "[php]": {
+        "editor.formatOnSave": true,
         "editor.tabSize": 4,
         "editor.insertSpaces": false,
     },
