--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,10 +34,12 @@
         "editor.insertSpaces": false,
     },
     "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.tabSize": 4,
         "editor.insertSpaces": true,
     },
     "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
         "editor.tabSize": 4,
         "editor.insertSpaces": false,
     }
