--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,10 @@
         "editor.tabSize": 4,
         "editor.insertSpaces": true,
     },
+    "[scss]": {
+        "editor.tabSize": 4,
+        "editor.insertSpaces": true,
+    },
     "[php]": {
         "editor.formatOnSave": true,
         "editor.tabSize": 4,
