--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "license": "GPL-2.0-or-later",
   "main": "build/index.js",
   "scripts": {
-		"build": "wp-scripts build",
-		"format": "wp-scripts format",
-		"lint:css": "wp-scripts lint-style",
-		"lint:js": "wp-scripts lint-js",
-		"start": "wp-scripts start",
-		"packages-update": "wp-scripts packages-update",
-		"zip": "sh cmd/zip.sh"
+    "build": "wp-scripts build",
+    "format": "wp-scripts format",
+    "lint:css": "wp-scripts lint-style",
+    "lint:js": "wp-scripts lint-js",
+    "start": "wp-scripts start",
+    "packages-update": "wp-scripts packages-update",
+    "zip": "sh cmd/zip.sh"
   },
   "dependencies": {
     "@wordpress/block-editor": "^7.0.4",
     "@wordpress/blocks": "^11.1.2",
+    "@wordpress/components": "^19.0.0",
+    "@wordpress/element": "^4.0.3",
     "@wordpress/i18n": "^4.2.3"
   },
   "devDependencies": {
