--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
         "ghinit": "curl https://raw.githubusercontent.com/braveryk7/GitHooks/main/conf/init.sh > init.sh && sh init.sh",
         "gh-script-init": "curl -o cmd/create-verup-issue.sh https://raw.githubusercontent.com/braveryk7/github-cli-scripts/main/cmd/create-verup-issue.sh",
         "jslanguages": "./vendor/bin/wp i18n make-json ./languages/admin-bar-tools-js-ja.po --no-purge"
+    },
+    "require": {
+        "phpunit/phpunit": "^9.5"
     }
 }
