refs #73 add phpunit cache file

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ build/
 #-------------------------------
 .eslintcache
 .stylelintcache
+
+#-------------------------------
+#   Created by Tester
+#-------------------------------
+.phpunit.result.cache
