--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "wp-coding-standards/wpcs": "*",
         "phpcompatibility/php-compatibility": "*",
         "wp-cli/wp-cli": "^2.5",
-        "wp-cli/wp-cli-bundle": "^2.5"
+        "wp-cli/wp-cli-bundle": "^2.5",
+        "phpunit/phpunit": "^9.5"
     },
     "scripts": {
         "post-autoload-dump": [
@@ -25,8 +26,5 @@
         "ghinit": "curl https://raw.githubusercontent.com/braveryk7/GitHooks/main/conf/init.sh > init.sh && sh init.sh",
         "gh-script-init": "curl -o cmd/create-verup-issue.sh https://raw.githubusercontent.com/braveryk7/github-cli-scripts/main/cmd/create-verup-issue.sh",
         "jslanguages": "./vendor/bin/wp i18n make-json ./languages/admin-bar-tools-js-ja.po --no-purge"
-    },
-    "require": {
-        "phpunit/phpunit": "^9.5"
     }
 }
