--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "wp-cli/wp-cli": "^2.5",
         "wp-cli/wp-cli-bundle": "^2.5",
         "phpunit/phpunit": "^9.5",
-        "phpstan/phpstan": "^1.4"
+        "phpstan/phpstan": "^1.4",
+        "szepeviktor/phpstan-wordpress": "^1.0"
     },
     "scripts": {
         "post-autoload-dump": [
