refs #112 add send-chat-tools.zip

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ build/
 #-------------------------------
 .cache/
 .phpunit.result.cache
+
+#-------------------------------
+#   etc
+#-------------------------------
+send-chat-tools.zip
