--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "ghinit": "curl https://raw.githubusercontent.com/braveryk7/GitHooks/main/conf/init.sh > init.sh && sh init.sh",
         "gh-script-init": "curl -o cmd/create-verup-issue.sh https://raw.githubusercontent.com/braveryk7/github-cli-scripts/main/cmd/create-verup-issue.sh",
         "zip": "bash cmd/zip.sh",
-        "make-jspot": "./vendor/bin/wp i18n make-pot . languages/js/send-chat-tools-ja.po --skip-php",
+        "make-jspot": "./vendor/bin/wp i18n make-pot . languages/js/send-chat-tools-ja.pot --skip-php",
         "make-pot": "./vendor/bin/wp i18n make-pot . languages/send-chat-tools-ja.po --skip-js",
         "make-json": "./vendor/bin/wp i18n make-json languages/js --no-purge"
     }
