refs #252 add settings section -> import/resolver

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -30,3 +30,7 @@ rules:
       alphabetize:
         order: asc
       newlines-between: always
+settings: 
+  import/resolver: 
+    typescript: 
+      project: "./"
