--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@wordpress/scripts": "^22.0.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "stylelint-order": "^5.0.0",
     "typescript": "^4.6.2"
   }
