--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,7 @@ env:
   es6: true
 extends:
   - plugin:@wordpress/eslint-plugin/recommended-with-formatting
+  - plugin:@typescript-eslint/recommended
   - plugin:import/warnings
 ignorePatterns:
   - jest.config.js
@@ -21,6 +22,7 @@ plugins:
   - import
 root: true
 rules:
+  "@typescript-eslint/ban-ts-comment": off
   import/order:
     - warn
     - groups:
