--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,9 @@ plugins:
   - import
 root: true
 rules:
+  max-len:
+    - 2
+    - code: 100
   "@typescript-eslint/ban-ts-comment": off
   import/order:
     - warn
