refs #257 add typescript.preferences.importModuleSpecifier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "less",
         "postcss"
     ],
+    "typescript.preferences.importModuleSpecifier": "non-relative",
     "[html]": {
         "editor.tabSize": 4,
         "editor.insertSpaces": true,
