--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "zip": "sh cmd/zip.sh"
   },
   "dependencies": {
+    "@wordpress/api-fetch": "^6.0.1",
     "@wordpress/components": "^19.5.0",
     "@wordpress/element": "^4.0.3",
     "@wordpress/i18n": "^4.2.3"
