--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@wordpress/scripts": "^22.0.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "stylelint-order": "^5.0.0",
+    "thread-loader": "^3.0.4",
     "ts-loader": "^9.2.7",
     "typescript": "^4.6.2"
   }
