refs #288 fix phpstan cmd

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "wplint-set": "./vendor/bin/phpcs --config-set default_standard WordPress",
         "wplint-rules": "./vendor/bin/phpcs -i",
         "phpcb": "./vendor/bin/phpcs --standard=ruleset.xml",
-        "phpstan": "./vendor/bin/phpstan analyse . -c ./phpstan.neon",
+        "phpstan": "./vendor/bin/phpstan analyse . -c ./phpstan.neon --memory-limit 2G",
         "test": "./vendor/bin/phpunit tests",
         "ghinit": "curl https://raw.githubusercontent.com/braveryk7/GitHooks/main/conf/init.sh > init.sh && sh init.sh",
         "gh-script-init": "curl -o cmd/create-verup-issue.sh https://raw.githubusercontent.com/braveryk7/github-cli-scripts/main/cmd/create-verup-issue.sh",
