--- a/.github/workflows/deploy-wordpress-svn.yml
+++ b/.github/workflows/deploy-wordpress-svn.yml
@@ -51,7 +51,7 @@ jobs:
       - name: SVN add & update
         run: |
           svn add ${{ steps.svn-env.outputs.PROJECT_NAME }}/trunk/* --force
-          svn cp ${{ steps.svn-env.outputs.PROJECT_NAME }}/trunk/ ${{ steps.svn-env.outputs.PROJECT_NAME }}/tags/${{ steps.svn-env.outputs.TAG }}
+          svn cp ${{ steps.svn-env.outputs.PROJECT_NAME }}/trunk/ ${{ steps.svn-env.outputs.PROJECT_NAME }}/tags/${{ steps.svn-env.outputs.VERSION }}
           svn update ${{ steps.svn-env.outputs.PROJECT_NAME }}/trunk/*
           svn update ${{ steps.svn-env.outputs.PROJECT_NAME }}/tags/*
 
@@ -62,4 +62,4 @@ jobs:
         run: |
           VERSION=`echo ${{ steps.svn-env.outputs.VERSION }} | sed -e "s/v//"`
           cd ${{ steps.svn-env.outputs.PROJECT_NAME }}
-          svn ci -m "version ${{ steps.svn-env.outputs.TAG }} release" --username "${{ secrets.SVN_USERNAME }}" --password "${{ secrets.SVN_PASSWORD }}" --non-interactive --no-auth-cache
+          svn ci -m "version ${{ steps.svn-env.outputs.VERSION }} release" --username "${{ secrets.SVN_USERNAME }}" --password "${{ secrets.SVN_PASSWORD }}" --non-interactive --no-auth-cache
