--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
         "squizlabs/php_codesniffer": "^3.7",
         "wp-coding-standards/wpcs": "*",
         "phpcompatibility/php-compatibility": "*",
-        "wp-cli/wp-cli-bundle": "^2.5",
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "^1.4",
         "szepeviktor/phpstan-wordpress": "^1.0",
-        "wp-cli/wp-cli": "^2.6"
+        "wp-cli/wp-cli": "^2.6",
+        "wp-cli/wp-cli-bundle": "^2.6"
     },
     "scripts": {
         "post-autoload-dump": [
