--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
-        "wp-coding-standards/wpcs": "*",
+        "wp-coding-standards/wpcs": "^2.3",
         "phpcompatibility/php-compatibility": "*",
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "^1.4",
