--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
         "wp-coding-standards/wpcs": "^2.3",
-        "phpcompatibility/php-compatibility": "*",
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "^1.4",
         "szepeviktor/phpstan-wordpress": "^1.0",
         "wp-cli/wp-cli": "^2.6",
-        "wp-cli/wp-cli-bundle": "^2.6"
+        "wp-cli/wp-cli-bundle": "^2.6",
+        "phpcompatibility/php-compatibility": "^9.3"
     },
     "scripts": {
         "post-autoload-dump": [
