--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
         "wp-coding-standards/wpcs": "^2.3",
-        "szepeviktor/phpstan-wordpress": "^1.0",
         "wp-cli/wp-cli": "^2.6",
         "wp-cli/wp-cli-bundle": "^2.6",
         "phpcompatibility/php-compatibility": "^9.3",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "szepeviktor/phpstan-wordpress": "^1.1"
     },
     "scripts": {
         "post-autoload-dump": [
