--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "wp-cli/wp-cli-bundle": "^2.6",
         "phpcompatibility/php-compatibility": "^9.3",
         "phpunit/phpunit": "^9.5",
-        "szepeviktor/phpstan-wordpress": "^1.1"
+        "szepeviktor/phpstan-wordpress": "^1.1",
+        "phpstan/phpstan": "^1.8"
     },
     "scripts": {
         "post-autoload-dump": [
