--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/wordpress__components": "^19.10.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "@wordpress/env": "^5.11.0",
     "@wordpress/scripts": "^23.4.0",
     "esbuild-loader": "^2.19.0",
     "eslint-import-resolver-typescript": "^3.2.5",
