--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "source.fixAll.stylelint": true,
     },
     "editor.insertSpaces": false,
+    "intelephense.format.enable": false,
     "phpsab.executablePathCBF": "./vendor/bin/phpcbf",
     "phpsab.executablePathCS": "./vendor/bin/phpcs",
     "phpsab.fixerEnable": true,
