--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,5 +5,6 @@
 		"stylelint.vscode-stylelint",
 		"tungvn.wordpress-snippet",
 		"valeryanm.vscode-phpsab",
+		"bmewburn.vscode-intelephense-client"
 	]
 }
