refs #366 add wp-env cmd

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:css": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js",
     "start": "wp-scripts start",
+		"wp-env": "wp-env",
     "packages-update": "wp-scripts packages-update",
     "zip": "sh cmd/zip.sh"
   },
