refs #486fix add if statement

--- a/.github/workflows/jslint.yml
+++ b/.github/workflows/jslint.yml
@@ -27,6 +27,7 @@ jobs:
           restore-keys: ${{ runner.os }}-node-
 
       - name: Install dependencies
+        if: steps.npm_cache.outputs.cache-hit != 'true'
         run: npm ci --ignore-scripts
 
       - name: ESLint
