--- a/.github/workflows/jslint.yml
+++ b/.github/workflows/jslint.yml
@@ -5,6 +5,9 @@ on:
     paths:
       - 'src/**'
 
+env:
+  SECRETS_CACHE: ${{ secrets.CACHE }}
+
 jobs:
   test:
     name: JS Lint
@@ -23,7 +26,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.SECRETS_CACHE }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node-
 
       - name: Install dependencies
