--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -8,7 +8,7 @@ on:
       - 'send-chat-tools.php'
 
 env:
-  SECRETS_CACHE: ${{ secrets.CACHE }}
+  CACHE_TAG: v1
 
 jobs:
   test:
@@ -32,7 +32,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ github.workspace }}/vendor
-          key: ${{ runner.os }}-composer-${{ env.SECRETS_CACHE }}-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-composer-${{ env.CACHE_TAG }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
