refs #511 fix use CACHE_TAG

--- a/.github/workflows/jslint.yml
+++ b/.github/workflows/jslint.yml
@@ -6,7 +6,7 @@ on:
       - 'src/**'
 
 env:
-  SECRETS_CACHE: ${{ secrets.CACHE }}
+  CACHE_TAG: v1
 
 jobs:
   test:
@@ -26,7 +26,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ env.SECRETS_CACHE }}-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ env.CACHE_TAG }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-composer-${{ env.CACHE_TAG }}-
             ${{ runner.os }}-composer-
