--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "zip": "sh cmd/zip.sh"
   },
   "dependencies": {
-    "@wordpress/components": "^25.7.0",
-    "@wordpress/i18n": "^4.41.0"
+    "@wordpress/components": "^25.7.0"
   },
   "devDependencies": {
     "@wordpress/env": "^8.7.0",
