--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "eslint-import-resolver-typescript": "^3.6.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "stylelint-order": "^6.0.3",
-    "thread-loader": "^4.0.2",
-    "ts-loader": "^9.4.4"
+    "thread-loader": "^4.0.2"
   }
 }
