refs #385 add package -> yoast/phpunit-polyfills

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "phpunit/phpunit": "^9.6",
         "szepeviktor/phpstan-wordpress": "^1.1",
         "phpstan/phpstan": "^1.10",
-        "slevomat/coding-standard": "^8.14"
+        "slevomat/coding-standard": "^8.14",
+        "yoast/phpunit-polyfills": "1.1"
     },
     "scripts": {
         "post-autoload-dump": [
