--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "szepeviktor/phpstan-wordpress": "^1.1",
         "phpstan/phpstan": "^1.10",
         "slevomat/coding-standard": "^8.14",
-        "yoast/phpunit-polyfills": "1.1"
+        "yoast/phpunit-polyfills": "1.1",
+        "yoast/wp-test-utils": "^1.2"
     },
     "scripts": {
         "post-autoload-dump": [
