--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:js": "wp-scripts lint-js",
     "start": "wp-scripts start",
     "wp-env": "wp-env",
-    "packages-update": "wp-scripts packages-update",
+		"test:env": "wp-env run --env-cwd='wp-content/plugins/send-chat-tools' tests-cli vendor/bin/phpunit -c phpunit.xml --verbose --testdox",
+		"packages-update": "wp-scripts packages-update",
     "zip": "sh cmd/zip.sh"
   },
   "dependencies": {
