refs #629 add GitHub Actions PHPUnit use twentytwentyfour

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Generate .wp-env.override.json
         run: |
-          echo '{"config": {},"core": "WordPress/WordPress#${{ matrix.wp-version }}","env": {},"mappings": {},"phpVersion": "${{ matrix.php-version }}","plugins": ["."],"themes": []}' > .wp-env.override.json
+          echo '{"config": {},"core": "WordPress/WordPress#${{ matrix.wp-version }}","env": {},"mappings": {},"phpVersion": "${{ matrix.php-version }}","plugins": ["."],"themes": ["https://downloads.wordpress.org/theme/twentytwentyfour.1.0.zip"]}' > .wp-env.override.json
 
       - name: Start wp-env
         run: npm run wp-env start -- --xdebug=coverage
